--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>5.9 キュースポーツスコアキーパー</title>
+    <title>5.9 スコアボード</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>5.9 キュースポーツスコアキーパー</h1>
+    <h1>5.9 スコアボード</h1>
 
     <div id="setup">
         <h2>ゲーム設定</h2>
