ball button design

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <option value="side">サイドポケット</option>
             </select>
 
-            <button id="recordScore">点数を記録</button>
+            <button id="recordScore" class="pool-ball-button">点数を記録</button>
             <button id="scratch">スクラッチ</button>
             <button id="nextPlayer">次のプレイヤー</button>
             <button id="undo">取り消す</button>
