--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
                 <option value="side">サイドポケット</option>
             </select>
 
-            <button id="recordScore" class="pool-ball-button">点数を記録</button>
+            <button id="recordScore" class="pool-ball-button">
+    <img src="" alt="Pool Ball" id="ballImage">
+</button>
+
             <button id="scratch">スクラッチ</button>
             <button id="nextPlayer">次のプレイヤー</button>
             <button id="undo">取り消す</button>
