--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         </div>
 
         <div id="actions">
-            <h3>点数記録</h3>
             <label for="currentPlayer">現在のプレイヤー:</label>
             <select id="currentPlayer">
                 <!-- プレイヤーオプションがここに生成されます -->
@@ -68,7 +67,7 @@
             <!-- 順番情報がここに表示されます -->
         </div>
 
-        <button id="endGame">ゲーム終了</button>
+        <button id="endGame">END</button>
     </div>
 
     <!-- スコア履歴のモーダル -->
