add corner and side buttons

--- a/index.html
+++ b/index.html
@@ -46,15 +46,13 @@
                 <!-- ボールのオプションがここに生成されます -->
             </select>
 
-            <label for="pocketType">ポケットタイプ:</label>
-            <select id="pocketType">
-                <option value="corner">コーナーポケット</option>
-                <option value="side">サイドポケット</option>
-            </select>
 
             <button id="recordScore" class="pool-ball-button">
     <img src="" alt="Pool Ball" id="ballImage">
 </button>
+<button id="cornerBtn" style="display: none;">コーナーポケット</button>
+<button id="sideBtn" style="display: none;">サイドポケット</button>
+
 
             <button id="scratch">スクラッチ</button>
             <button id="nextPlayer">次のプレイヤー</button>
