--- a/index.html
+++ b/index.html
@@ -50,8 +50,13 @@
             <button id="recordScore" class="pool-ball-button">
     <img src="" alt="Pool Ball" id="ballImage">
 </button>
-<button id="cornerBtn" style="display: none;">コーナーポケット</button>
-<button id="sideBtn" style="display: none;">サイドポケット</button>
+<button id="cornerBtn" style="display: none;">
+    <img src="/assets/corner.png" alt="Corner Pocket" style="width: 50px; height: 50px;">
+</button>
+<button id="sideBtn" style="display: none;">
+    <img src="/assets/center.png" alt="Side Pocket" style="width: 50px; height: 50px;">
+</button>
+
 
 
             <button id="scratch">スクラッチ</button>
