better pocket imgs

--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
             <button id="recordScore" class="pool-ball-button">
     <img src="" alt="Pool Ball" id="ballImage">
 </button>
-<button id="cornerBtn" style="display: none;">
-    <img src="/assets/corner.png" alt="Corner Pocket" style="width: 50px; height: 50px;">
+<button id="cornerBtn" class="pocket-btn hidden">
+    <img src="/assets/corner.png" alt="Corner Pocket" class="pocket-img">
 </button>
-<button id="sideBtn" style="display: none;">
-    <img src="/assets/center.png" alt="Side Pocket" style="width: 50px; height: 50px;">
+<button id="sideBtn" class="pocket-btn hidden">
+    <img src="/assets/center.png" alt="Side Pocket" class="pocket-img">
 </button>
+
 
 
 
