better pocket imgs2

--- a/index.html
+++ b/index.html
@@ -50,14 +50,12 @@
             <button id="recordScore" class="pool-ball-button">
     <img src="" alt="Pool Ball" id="ballImage">
 </button>
-<button id="cornerBtn" class="pocket-btn hidden">
+<button id="cornerBtn" style="display: none;">
     <img src="/assets/corner.png" alt="Corner Pocket" class="pocket-img">
 </button>
-<button id="sideBtn" class="pocket-btn hidden">
+<button id="sideBtn" style="display: none;">
     <img src="/assets/center.png" alt="Side Pocket" class="pocket-img">
 </button>
-
-
 
 
             <button id="scratch">スクラッチ</button>
